--- a/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTLiveChildView.xib
+++ b/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTLiveChildView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -50,7 +49,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="王学生" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSn-ND-zVL" userLabel="nameLabel">
-                    <rect key="frame" x="6" y="4" width="111" height="26"/>
+                    <rect key="frame" x="6" y="4" width="124" height="26"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="26" id="8Dm-UZ-cnb"/>
                     </constraints>
@@ -59,21 +58,21 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="w1" translatesAutoresizingMaskIntoConstraints="NO" id="zkC-4d-MYD" userLabel="teacherRemarkImageview">
-                    <rect key="frame" x="122" y="5" width="20" height="20"/>
+                    <rect key="frame" x="135" y="5" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="40H-X7-ObH"/>
                         <constraint firstAttribute="width" constant="20" id="zel-gI-aZt"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mk1" translatesAutoresizingMaskIntoConstraints="NO" id="580-ln-Siq" userLabel="teacherRemarkImageview">
-                    <rect key="frame" x="174" y="5" width="20" height="20"/>
+                    <rect key="frame" x="181" y="6" width="13" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="20" id="7ns-M5-Vfp"/>
-                        <constraint firstAttribute="height" constant="20" id="kye-Rd-dqg"/>
+                        <constraint firstAttribute="width" constant="13" id="7ns-M5-Vfp"/>
+                        <constraint firstAttribute="height" constant="18" id="kye-Rd-dqg"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mk1" translatesAutoresizingMaskIntoConstraints="NO" id="s9P-QJ-PfW" userLabel="teacherRemarkImageview">
-                    <rect key="frame" x="148" y="5" width="20" height="20"/>
+                    <rect key="frame" x="161" y="5" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="Bk6-ly-FnK"/>
                         <constraint firstAttribute="height" constant="20" id="wfp-GQ-tey"/>
@@ -88,7 +87,7 @@
                 <constraint firstItem="zkC-4d-MYD" firstAttribute="centerY" secondItem="SsF-rI-hI5" secondAttribute="centerY" id="TmO-fc-keX"/>
                 <constraint firstItem="s9P-QJ-PfW" firstAttribute="leading" secondItem="zkC-4d-MYD" secondAttribute="trailing" constant="6" id="UTm-Vw-8gj"/>
                 <constraint firstItem="s9P-QJ-PfW" firstAttribute="centerY" secondItem="SsF-rI-hI5" secondAttribute="centerY" id="Uud-Va-TgP"/>
-                <constraint firstItem="580-ln-Siq" firstAttribute="leading" secondItem="s9P-QJ-PfW" secondAttribute="trailing" constant="6" id="VFe-oK-jNI"/>
+                <constraint firstItem="580-ln-Siq" firstAttribute="leading" secondItem="s9P-QJ-PfW" secondAttribute="trailing" id="VFe-oK-jNI"/>
                 <constraint firstItem="sSn-ND-zVL" firstAttribute="leading" secondItem="SsF-rI-hI5" secondAttribute="leading" constant="6" id="jVL-MQ-RT3"/>
                 <constraint firstAttribute="trailing" secondItem="580-ln-Siq" secondAttribute="trailing" constant="6" id="qUS-Z1-HmR"/>
             </constraints>
