--- a/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTLiveChildView.xib
+++ b/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTLiveChildView.xib
@@ -18,7 +18,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="190" height="106"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PiP-Gr-pTH">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PiP-Gr-pTH">
                     <rect key="frame" x="0.0" y="0.0" width="190" height="106"/>
                 </imageView>
             </subviews>
