--- a/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTDeviceSettingView.xib
+++ b/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTDeviceSettingView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -69,6 +68,7 @@
                         </label>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i4V-Ff-1cC">
                             <rect key="frame" x="261" y="14" width="51" height="38.5"/>
+                            <color key="onTintColor" red="0.30196078431372547" green="0.56470588235294117" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </switch>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -142,6 +142,7 @@
                         </label>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQ2-92-V4P">
                             <rect key="frame" x="261" y="14" width="51" height="39"/>
+                            <color key="onTintColor" red="0.30196078430000001" green="0.56470588239999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </switch>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
