--- a/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTDeviceSettingView.xib
+++ b/YMTCloudClassroom/Framework/YMTCloudClassroom.framework/Versions/A/Resources/YMTDeviceSettingView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="YMTDeviceSettingView">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="YMTDeviceSettingView">
             <rect key="frame" x="0.0" y="0.0" width="330" height="330"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -84,7 +84,7 @@
                     <rect key="frame" x="0.0" y="175" width="330" height="155"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZV-a9-adl">
-                            <rect key="frame" x="20" y="26" width="290" height="51.5"/>
+                            <rect key="frame" x="20" y="30" width="290" height="43"/>
                             <color key="backgroundColor" red="0.37647058823529411" green="0.46274509803921571" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                             <state key="normal" title="设备检测">
@@ -100,7 +100,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aZp-ol-nsC">
-                            <rect key="frame" x="20" y="90.5" width="290" height="51.5"/>
+                            <rect key="frame" x="20" y="94.5" width="290" height="43.5"/>
                             <color key="backgroundColor" red="0.37647058820000001" green="0.46274509800000002" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                             <state key="normal" title="离开教室">
@@ -122,7 +122,7 @@
                         <constraint firstItem="aZp-ol-nsC" firstAttribute="centerY" secondItem="xU4-70-EyH" secondAttribute="centerY" multiplier="3:2" id="Jfn-AR-Zmc"/>
                         <constraint firstItem="VZV-a9-adl" firstAttribute="centerY" secondItem="xU4-70-EyH" secondAttribute="centerY" multiplier="2:3" id="Urn-VI-cMH"/>
                         <constraint firstItem="aZp-ol-nsC" firstAttribute="leading" secondItem="xU4-70-EyH" secondAttribute="leading" constant="20" id="ebo-WF-mEW"/>
-                        <constraint firstItem="VZV-a9-adl" firstAttribute="height" secondItem="xU4-70-EyH" secondAttribute="height" multiplier="1:3" id="hHj-cr-voP"/>
+                        <constraint firstItem="VZV-a9-adl" firstAttribute="height" secondItem="xU4-70-EyH" secondAttribute="height" multiplier="5:18" id="hHj-cr-voP"/>
                         <constraint firstAttribute="trailing" secondItem="aZp-ol-nsC" secondAttribute="trailing" constant="20" id="ndn-i7-xO9"/>
                         <constraint firstItem="VZV-a9-adl" firstAttribute="leading" secondItem="xU4-70-EyH" secondAttribute="leading" constant="20" id="xug-hX-VoD"/>
                         <constraint firstItem="aZp-ol-nsC" firstAttribute="height" secondItem="VZV-a9-adl" secondAttribute="height" id="yxv-ff-oH7"/>
@@ -175,6 +175,11 @@
                 <constraint firstAttribute="bottom" secondItem="xU4-70-EyH" secondAttribute="bottom" id="zxF-4E-uGB"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                    <integer key="value" value="8"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
         </view>
     </objects>
